--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-/* Write your CSS here! */
+body {
+    margin: 0px 8px 0px;
+    display: block
+}
+
+#mainHeading {
+    color: red;
+}
+
+.funParagraph {
+    color: green
+}
