--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,73 @@
 body {
+    background-color: oldlace;
     margin: 8px;
-    display: block
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.funParagraph {
+    color: green
+}
+
+a {
+    padding: 1pc;
+    text-decoration: none;
+}
+
+a:visited {
+    color: white;
+}
+
+a:link{
+    color: white;
+}
+
+header {
+    margin: auto;
+    width: 50%
+}
+
+ul {
+    padding: 1pc 0pc 1pc;
+    background-color: darkgray;
+    text-align: center;
+    list-style-type: none;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+}
+
+li {
+    display: inline-block;
+}
+
+header h1 {
+    text-align: center;
+}
+
+main {
+    margin: auto;
+    width: 50%
 }
 
 #mainHeading {
     color: red;
 }
 
-.funParagraph {
-    color: green
+section {
+    padding: 1pc;
+}
+
+.lightGray {
+    background-color: lightgray;
+}
+
+.darkGray {
+    background-color: darkgray;
+    color: white;
 }
